--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "~18.1.0",
-    "@angular/cdk": "~18.1.0",
-    "@angular/common": "~18.1.0",
-    "@angular/compiler": "~18.1.0",
-    "@angular/core": "~18.1.0",
-    "@angular/elements": "~18.1.0",
+    "@angular/animations": "~19.1.4",
+    "@angular/cdk": "~19.1.2",
+    "@angular/common": "~19.1.4",
+    "@angular/compiler": "~19.1.4",
+    "@angular/core": "~19.1.4",
+    "@angular/elements": "~19.1.4",
     "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "~18.1.0",
-    "@angular/platform-browser": "~18.1.0",
-    "@angular/platform-browser-dynamic": "~18.1.0",
-    "@angular/router": "~18.1.0",
+    "@angular/forms": "~19.1.4",
+    "@angular/platform-browser": "~19.1.4",
+    "@angular/platform-browser-dynamic": "~19.1.4",
+    "@angular/router": "~19.1.4",
     "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
     "d3-ease": "^3.0.1",
@@ -51,21 +51,21 @@
     "transformation-matrix": "^2.16.1",
     "tslib": "^2.3.1",
     "webcola": "^3.4.0",
-    "zone.js": "~0.14.7"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1802.11",
-    "@angular-devkit/build-angular": "~18.1.0",
-    "@angular-devkit/core": "~18.1.0",
-    "@angular-devkit/schematics": "~18.1.0",
-    "@angular-eslint/builder": "~18.1.0",
-    "@angular-eslint/eslint-plugin": "^18.4.0",
-    "@angular-eslint/eslint-plugin-template": "^18.4.0",
-    "@angular-eslint/schematics": "~18.1.0",
-    "@angular-eslint/template-parser": "^18.4.0",
-    "@angular/cli": "~18.1.0",
-    "@angular/compiler-cli": "~18.1.0",
-    "@angular/language-service": "~18.1.0",
+    "@angular-devkit/build-angular": "~19.1.5",
+    "@angular-devkit/core": "~19.1.5",
+    "@angular-devkit/schematics": "~19.1.5",
+    "@angular-eslint/builder": "~19.0.2",
+    "@angular-eslint/eslint-plugin": "~19.0.2",
+    "@angular-eslint/eslint-plugin-template": "~19.0.2",
+    "@angular-eslint/schematics": "~19.0.2",
+    "@angular-eslint/template-parser": "~19.0.2",
+    "@angular/cli": "19.1.5",
+    "@angular/compiler-cli": "~19.1.4",
+    "@angular/language-service": "~19.1.4",
     "@babel/core": "^7.7.7",
     "@chromatic-com/storybook": "^3.2.2",
     "@compodoc/compodoc": "^1.1.26",
@@ -74,7 +74,7 @@
     "@storybook/addon-interactions": "^8.4.1",
     "@storybook/addon-links": "^8.4.1",
     "@storybook/addon-onboarding": "^8.4.1",
-    "@storybook/angular": "^8.4.1",
+    "@storybook/angular": "^8.5.2",
     "@storybook/blocks": "^8.4.1",
     "@storybook/builder-webpack5": "^8.4.1",
     "@storybook/test": "^8.4.1",
