--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
         "@angular-eslint/no-input-rename": "off",
         "@angular-eslint/no-output-native": "off",
         "@typescript-eslint/consistent-type-imports": "off",
-        "@typescript-eslint/no-duplicate-enum-values": "off"
+        "@typescript-eslint/no-duplicate-enum-values": "off",
+        "@angular-eslint/prefer-standalone": "off"
       }
     }
   ]
