--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "9.0.1",
+  "version": "10.0.0-alpha.0",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
@@ -30,10 +30,10 @@
   },
   "homepage": "https://github.com/swimlane/ngx-graph#readme",
   "peerDependencies": {
-    "@angular/animations": "15.x || 16.x || 17.x || 18.x",
-    "@angular/common": "15.x || 16.x || 17.x || 18.x",
-    "@angular/core": "15.x || 16.x || 17.x || 18.x",
-    "@angular/cdk": "15.x || 16.x || 17.x || 18.x",
+    "@angular/animations": "15.x || 16.x || 17.x || 18.x || 19.x",
+    "@angular/common": "15.x || 16.x || 17.x || 18.x || 19.x",
+    "@angular/core": "15.x || 16.x || 17.x || 18.x || 19.x",
+    "@angular/cdk": "15.x || 16.x || 17.x || 18.x || 19.x",
     "rxjs": "7.x"
   },
   "dependencies": {
