--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@swimlane/ngx-graph",
+  "name": "@fhayd/ngx-graph",
   "version": "11.0.0-alpha.0",
   "description": "Graph visualization for angular",
   "repository": {
